--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,7 @@
     "mongoose": "^8.3.2",
     "nodemailer": "^6.9.13",
     "validator": "^13.11.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
