--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -16,6 +17,5 @@
     "nodemailer": "^6.9.13",
     "validator": "^13.11.0"
   },
-  "devDependencies": {},
   "description": ""
 }
